bk_ida/gccida/c2/print_rtx
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtx/src/print-rtl.c:617:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v45; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtx/src/print-rtl.c:621:4: error: expected ';' after expression
rtx v49; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtx/src/print-rtl.c:621:5: error: use of undeclared identifier 'v49'
rtx v49; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtx/src/print-rtl.c:757:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v20 = ( __int64)in_rtx[1]; 
                ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtx/src/print-rtl.c:775:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v33 = ( __int64)in_rtx[2]; 
                ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtx/src/print-rtl.c:785:19: error: use of undeclared identifier 'off_6474F4'
fprintf( outfile, off_6474F4, *( _DWORD *)&in_rtx[2]); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtx/src/print-rtl.c:794:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
rtx = (  struct rtx_def *)in_rtx[2]; 
                          ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtx/src/print-rtl.c:797:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v34 = ( __int64)in_rtx[2]; 
                ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtx/src/print-rtl.c:804:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v33 = ( __int64)in_rtx[2]; 
                ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtx/src/print-rtl.c:848:20: error: expected expression
print_rtx( *( rtx *)&rtwint[2 * v13++ + 2]); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtx/src/print-rtl.c:900:19: error: use of undeclared identifier 'off_6474F4'
fprintf( outfile, off_6474F4, *( _DWORD *)&in_rtx[3]); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtx/src/print-rtl.c:953:7: error: use of undeclared identifier 'print_rtx_hi_name'; did you mean 'print_rtx_head'?
v35 = print_rtx_hi_name[v24]; 
      ^~~~~~~~~~~~~~~~~
      print_rtx_head
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtx/src/print-rtl.c:66:13: note: 'print_rtx_head' declared here
const char *print_rtx_head = "";
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtx/src/print-rtl.c:964:7: error: use of undeclared identifier 'print_rtx_qi_name'; did you mean 'print_rtx_head'?
v35 = print_rtx_qi_name[v24]; 
      ^~~~~~~~~~~~~~~~~
      print_rtx_head
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtx/src/print-rtl.c:66:13: note: 'print_rtx_head' declared here
const char *print_rtx_head = "";
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtx/src/print-rtl.c:974:7: error: use of undeclared identifier 'print_rtx_hi_name'; did you mean 'print_rtx_head'?
v35 = print_rtx_hi_name[v39]; 
      ^~~~~~~~~~~~~~~~~
      print_rtx_head
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtx/src/print-rtl.c:66:13: note: 'print_rtx_head' declared here
const char *print_rtx_head = "";
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtx/src/print-rtl.c:996:19: error: use of undeclared identifier 'off_67AF83'
fprintf( outfile, off_67AF83, ( unsigned int)( v24 - 29)); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtx/src/print-rtl.c:1029:19: error: use of undeclared identifier 'off_6474F4'
fprintf( outfile, off_6474F4, rtuint); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtx/src/print-rtl.c:1052:19: error: use of undeclared identifier 'off_6763D0'
fprintf( outfile, off_6763D0, note_insn_name[v22]); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtx/src/print-rtl.c:1060:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v15.rtwint = ( __int64)in_rtx->fld[v4]; 
                       ^~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtx/src/print-rtl.c:1081:19: error: use of undeclared identifier 'off_6474F4'
fprintf( outfile, off_6474F4); 
                  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_rtx/src/obj/print-rtl.o] Error 1
